test/Fail/Issue2152.agda
-- Andreas, 2016-08-26, issue 2152
-- Option --allow-unsolved-metas is not --safe

Unsolved : Set
Unsolved = ?
